# cmake_demo

add/: CMakeLists.txt  add.cpp  add.hpp  add_config.cmake.in
multify/: CMakeLists.txt  multify.cpp  multify.hpp  multify_config.cmake.in
test/: CMakeLists.txt  main.cpp
